# lview

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: lview.rb
src/: app.rs  config.rs  discovery.rs  events.rs  log_stream.rs  main.rs  search.rs  ssh.rs  ui.rs
